Update MSS.py for ddbj_record and add test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dr_tools = ["py.typed"]
 files = ["./src/dr_tools/**/*.py", "./tests/**/*.py"]
 follow_imports = "silent"
 strict = true
+plugins = ["pydantic.mypy"]
 
 [tool.pylint.messages_control]
 disable = [
