Update json2*.py for ddbj_record and add test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ files = ["./src/dr_tools/**/*.py", "./tests/**/*.py"]
 follow_imports = "silent"
 strict = true
 plugins = ["pydantic.mypy"]
+ignore_missing_imports = true
 
 [tool.pylint.messages_control]
 disable = [
